updated project name

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-<title>Radiant Tardigrade</title>
+<title>Virtual Expanses</title>
 
 <style>
 * {box-sizing: border-box; }
@@ -29,7 +29,7 @@ table td {border: 1px solid #ddd; padding: 6px 13px; }
 
 <body>
 <article>
-<h1>Radiant Tardigrade</h1>
+<h1>Virtual Expanses</h1>
 <p>Project description (concept)
 <h2>Video of robot / VR</h2>
 <div id="vid"></div>
